--- a/src/LoginForm/LoginForm.css
+++ b/src/LoginForm/LoginForm.css
@@ -2,7 +2,7 @@
     padding: 1%;
     background: rgb(255,255,255,0.85);
     width: 85%;
-    height: 85%;
+    
     margin-top: auto;
     margin-bottom: auto;
     margin-left: auto;
@@ -10,6 +10,9 @@
     border: 2px solid #414f47;
     border-radius: 5px;
     box-shadow: 0px 20px 11px -18px rgb(255,255,255,0.5);
+ }
+ .login-form {
+     height: 100vh;
  }
  #login-message-link {
      color: #414f47;
