--- a/src/SignupForm/SignupForm.css
+++ b/src/SignupForm/SignupForm.css
@@ -1,7 +1,6 @@
 .signup {
     padding: 1%;
     width: 85%;
-    height: 85%;
     margin-top: auto;
     margin-bottom: auto;
     margin-left: auto;
@@ -12,7 +11,7 @@
     box-shadow: 0px 20px 11px -18px rgb(255,255,255,0.5);
  }
  .signup-form {
-     min-height: 400px;
+     height: 100vh;
      padding-top: 100px;
      width: 100%;
      background: url('../images/carpet.jpg');
